fixed image stretch

--- a/css/style.css
+++ b/css/style.css
@@ -198,11 +198,18 @@ body {
   margin-left: 30px;
 }
 #right-content #home-right {
-  background-color: aqua;
-  background-image: url("../img/portfolio-10.jpg");
+  overflow: hidden;
+  display: none;
+}
+#right-content #home-right .tile {
+  background-image: url("../img/girl33.jpg");
+  width: 100%;
+  height: 100%;
+  margin-left: -15px;
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
-  background-position: left center;
+  padding-top: 66.7%;
 }
 #right-content #services .services-wrapper {
   padding: 60px 20px;
@@ -252,21 +259,49 @@ body {
   margin-left: 20px;
 }
 #right-content #portfoilio .column {
-  height: 400px;
   overflow: hidden;
-  padding: 10px;
 }
 #right-content #portfoilio {
   padding: 20px;
+  position: relative;
 }
-#right-content #portfoilio .column img {
-  min-height: 100%;
-  max-width: 100%;
+#right-content #portfoilio .filter-buttons #humburger-button {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+#right-content #portfoilio .filter-buttons {
+  position: absolute;
+  right: 20px;
+  top: 0;
+  z-index: 1;
+
+  line-height: 22px;
+}
+#right-content #portfoilio .filter-buttons .dropdown-content {
+  width: 130px;
+  background-color: var(--less-dark-color);
+  margin-top: 20px;
+  padding-left: 14px;
+}
+#right-content #portfoilio .dropdown-content .filter-btn {
+  display: block;
+  text-align: left;
+  padding: 5px;
+  letter-spacing: 0.1em;
+  color: var(--white-color);
+  cursor: pointer;
+}
+#right-content #portfoilio .column .tile {
   width: 100%;
-  object-fit: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 50%;
+  margin-bottom: 15px;
 }
 #right-content #portfoilio .active {
-  background-color: blue;
+
 }
 #right-content #portfoilio .show {
   display: block;
@@ -313,6 +348,9 @@ body {
   #toggle-button {
     left: 10px;
     top: 25px;
+  }
+  #right-content #home-right {
+    display: block;
   }
   #right-content #services .services-wrapper {
     padding-right: 80px;
